# gridfinity-invoke

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  tasks.py
.github/workflows/: test.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-12-08-project-structure/: spec.md  tasks.md
agent-os/specs/2025-12-14-project-save-load/: initialization.md  spec.md  tasks.md
agent-os/specs/2025-12-14-smart-baseplate-sizing/: spec.md  tasks.md
agent-os/specs/2025-12-16-bdd-scenarios-documentation/: spec.md  tasks.md
invoke_collections/: __init__.py  dev.py  gf.py  helpers.py
src/gridfinity_invoke/: __init__.py  config.py  generators.py  projects.py
tests/: conftest.py  test_baseplate_splitting.py  test_collections.py  test_config.py  test_config_command.py  test_drawer_fit_generator.py  test_drawer_fit_integration.py  test_drawer_fit_project.py  test_drawer_fit_task.py  test_generation_tasks.py  test_generator_config.py  test_gridfinity_tasks.py  test_install_script.py  test_project_integration.py  test_project_tasks.py  test_projects.py  test_quality_tasks.py  test_structure.py  test_tools.py
tests/features/: baseplate.feature  bin.feature  config.feature  drawer_fit.feature  edge_cases.feature  framework_test.feature  list_projects.feature  load.feature  new_project.feature
tests/step_defs/: __init__.py  conftest.py  test_baseplate_steps.py  test_bin_steps.py  test_config_steps.py  test_drawer_fit_steps.py  test_edge_cases_steps.py  test_framework_setup.py  test_project_steps.py
(+15 files in other folders)
